# src/validations/reminder.validation.js
@@ -1,0 +1,6 @@
+import Joi from "joi";
+
+export const updateReminderSchema = Joi.object({
+  reminderId: Joi.string().required(),
+  isRead: Joi.boolean().required(),
+});
